@@ -27,6 +27,7 @@ Bugs fixed
 * #3774: Incremental HTML building broken when using citations
 * #3772: 'str object' has no attribute 'filename'
 * #3763: got epubcheck validations error if epub_cover is set
+* #3779: 'ImportError' in sphinx.ext.autodoc due to broken 'sys.meta_path'
 
 Testing
 --------
